# MAGRAY_Cli

./: .claude_instructions  .cursorrules  .env  .env.example  .env.filesystem.example  .env.quick-start  .gitignore  1  ASSISTANT.md  BUILD_FEATURES.md  CHANGELOG.md  CI_CD_MAINTAINER_GUIDE.md  CLAUDE.md  CLEAN_ARCHITECTURE_ANALYSIS.md  CONFIG.md  COVERAGE_PLAN.md  CTL_SYSTEM_SUCCESS.md  CTL_v2.0.md  Cargo.temp.ws.toml  Cargo.toml  CUsers1.claudeagentsshared-journalagent-coordination.json  ERROR_HANDLING_STRATEGY.md  HNSW_PERFORMANCE_ANALYSIS.md  IMPLEMENTATION_PLAN.md  LEGACY_REMOVAL_REPORT.md  LICENSE  MEMORY_FIX_INSTRUCTIONS.md  MEMORY_FIX_PLAN.md  MEMORY_SYSTEM_FINAL_REPORT.md  MEMORY_SYSTEM_STATUS.md  MEMORY_SYSTEM_SUMMARY.md  Makefile  ONNX_FINAL_SOLUTION.md  ONNX_INTEGRATION_SOLUTION.md  ONNX_MODELS_FINAL_STATUS.md  ORT_2.0_MIGRATION_ANALYSIS.md  ORT_2.0_MIGRATION_STATUS.md  PRODUCTION_CHECKLIST.md  PROJECT_CONTEXT.md  QWEN3_INTEGRATION_REPORT_FINAL.md  (+58 more)
crates/ai/: Cargo.toml
crates/ai/examples/: check_default_models.rs  check_gpu_usage.rs  debug_qwen3.rs  real_onnx_test.rs  test_mxbai_real_tokenization.rs  test_real_models.rs  test_real_tokenization.rs
crates/ai/src/: auto_device_selector.rs  config.rs  embeddings.rs  embeddings_bge_m3.rs  embeddings_cpu.rs  embeddings_gpu.rs  embeddings_optimized.rs  embeddings_optimized_v2.rs  embeddings_ort2.rs  embeddings_qwen3.rs  embeddings_real.rs  embeddings_real_simple.rs  embeddings_real_v2.rs  embeddings_v2.rs  embeddings_v3.rs  errors.rs  gpu_config.rs  gpu_detector.rs  gpu_fallback.rs  gpu_memory_pool.rs  gpu_pipeline.rs  gpu_pipeline_optimized.rs  lib.rs  memory_pool.rs  mock_models.rs  model_downloader.rs  model_registry.rs  models.rs  onnx_runtime_simple.rs  ort_setup.rs  reranker_mxbai.rs  reranker_mxbai_optimized.rs  reranker_qwen3.rs  reranker_qwen3_optimized.rs  reranking.rs  tensorrt_cache.rs  tokenizer.rs
crates/ai/tests/: integration_onnx.rs  test_adaround_quantization.rs.disabled  test_ai_config.rs  test_auto_device_selector.rs  test_config.rs  test_embeddings_bge_m3.rs  test_embeddings_cpu.rs  test_embeddings_gpu_advanced.rs  test_errors.rs  test_gpu_config.rs  test_gpu_config.rs.old  test_gpu_config_simplified.rs  test_gpu_detector.rs  test_gpu_detector_simplified.rs  test_gpu_fallback.rs  test_gpu_integration.rs  test_gpu_pipeline_advanced.rs  test_gpu_pipeline_comprehensive.rs  test_memory_optimization.rs  test_memory_pool.rs  test_model_downloader_comprehensive.rs  test_model_registry.rs  test_model_registry_simplified.rs  test_models.rs  test_ort_setup.rs  test_qwen3_tokenization.rs  test_reranker_integration.rs  test_stack_dataset.rs.disabled  test_tokenizer_comprehensive.rs
crates/application/: Cargo.toml
crates/application/src/: errors.rs  lib.rs
crates/application/tests/: ai_integration_tests.rs  application_service_tests.rs  router_integration_tests.rs  todo_integration_tests.rs  tools_integration_tests.rs  use_case_tests.rs
crates/cli/: Cargo.toml  setup_ort_env.sh  system_status.txt
crates/cli/src/: agent.rs  agent_core.rs  agent_tests.rs  agent_traits.rs  circuit_breaker_manager.rs  container_traits.rs  handler_registry.rs  health_checks.rs  legacy_bridge.rs  lib.rs  main.rs  performance_tracker.rs  progress.rs  refactored_unified_agent.rs  status_tests.rs  strategy_factory.rs  tui_chat.rs  unified_agent_v2.rs  util.rs
crates/cli/tests/: cli_auto_setup.rs  cli_models.rs  cli_models_install_smoke.rs  test_agent.rs  test_cli.rs  test_commands_gpu.rs  test_commands_memory.rs  test_commands_models.rs  test_events_cli.rs  test_health_checks.rs  test_memory_backup_restore.rs  test_memory_hybrid_cli.rs  test_memory_integration.rs  test_memory_orchestrated_cli.rs  test_memory_search_cli.rs  test_policies.rs  test_policies_cli_env.rs  test_progress.rs  test_services_intent_analysis.rs  test_services_llm_communication.rs  test_services_request_routing.rs  test_services_resilience.rs  test_smart_cli.rs  test_tasks_cli.rs  test_tools_cli.rs  test_tools_usage_guide.rs
crates/common/: Cargo.toml
crates/common/src/: comprehensive_errors.rs  config_base.rs  error_monitor.rs  errors.rs  event_bus.rs  events.rs  input_validation.rs  lib.rs  macros.rs  policy.rs  sandbox_config.rs  scheduler.rs  service_macros.rs  service_traits.rs  structured_logging.rs  test_utils.rs  topics.rs
crates/common/tests/: test_event_bus_stress.rs  test_logging_advanced.rs  test_structured_logging.rs  (+1 more)
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/domain/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/integration-tests/: Cargo.toml  README.md
crates/llm/: Cargo.toml
crates/memory/: Cargo.toml  README.md  build.rs  download_ort.ps1  errors.txt  magray_memory.jsonl
crates/orchestrator/: Cargo.toml
crates/todo/: Cargo.toml
crates/tools/: Cargo.toml  MCP_SECURITY_MIGRATION.md  MCP_TIMEOUT_HEARTBEAT_GUIDE.md
docs-daemon/: .gitignore  CTL_SYNC_GUIDE.md  Cargo.toml  README.md
docs-daemon-python/: .gitignore  Makefile  README.md  config_editor.py  daemon_manager.py  install.bat  pyproject.toml  requirements.txt  settings.json  start_daemon.bat  test_demo.py
docs-daemon-python/ctl_sync/: __init__.py  config.py  core.py  json_config.py  main.py  schema.py  utils.py  watchers.py
docs-daemon-python/tests/: test_parsers.py  test_schema.py
docs-daemon/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_config_parser.rs  fuzz_tokenizer.rs  fuzz_vector_operations.rs
implementation_plan/rust_skeleton/: .env  .env.example  Cargo.toml  PROPER_SOLUTION.md  QUICK_START_WINDOWS.md  README.md  REFACTORING_COMPLETE.md  config.json  test.txt  test2.md  test_from_cli.txt  test_improved.txt  test_memory.rs  test_memory_reality.rs  test_tool_creation.rs
templates/cli-starter/: Cargo.toml
tests/: Cargo.toml  E2E_TESTING_COMMANDS.md  integration_basic.rs  lib.rs  main.rs  rag_golden_suite.rs  rag_golden_tests.rs
tests/evaluators/: gpt5_evaluator.rs
tests/integration/: human_like_testing.rs
tests/scenarios/: complex_scenarios.yaml  sample_scenarios.yaml  scenario_manager.rs
(+1078 files in other folders)
