[workspace]
resolver = "2"
members = [
    "core/*",
    "apps/*",
    "tools/*",
    "libs/*"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Amir & Altair"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/amir/project"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
# Error handling
anyhow = "1.0"
thiserror = "2.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Testing
mockall = "0.13"
proptest = "1.6"
criterion = "0.5"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
inherits = "release"