[package]
name = "magray-fuzz"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1.4", features = ["derive"] }

# Project dependencies for fuzzing
ai = { path = "../crates/ai" }
cli = { path = "../crates/cli" }
common = { path = "../crates/common" }
memory = { path = "../crates/memory" }
tools = { path = "../crates/tools" }

tokio = { version = "1.47", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "fuzz_tokenizer"
path = "fuzz_targets/fuzz_tokenizer.rs"
test = false
doc = false

[[bin]]
name = "fuzz_config_parser"
path = "fuzz_targets/fuzz_config_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_command_parser"
path = "fuzz_targets/fuzz_command_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_vector_operations"
path = "fuzz_targets/fuzz_vector_operations.rs"
test = false
doc = false

[[bin]]
name = "fuzz_memory_operations"
path = "fuzz_targets/fuzz_memory_operations.rs"
test = false
doc = false