[package]
name = "application"
version = "0.1.0"
edition = "2021"

[dependencies]
# Domain Layer
domain = { path = "../domain" }

# Common utilities
common = { path = "../common" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling  
thiserror = "1.0"
anyhow = "1.0"

# UUID for request tracking
uuid = { version = "1.10", features = ["v4"] }

# Logging
tracing = "0.1"

# Metrics
metrics = "0.21"

# Validation
validator = { version = "0.16", features = ["derive"] }

[dev-dependencies]
mockall = "0.12"
tokio-test = "0.4"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports"] }