[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "magray"
path = "src/main.rs"

[features]
default = []

[dependencies]
llm = { path = "../llm" }
router = { path = "../router" }
ai = { path = "../ai" }
memory = { path = "../memory" }
common = { path = "../common" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = "2.0"
prettytable-rs = "0.10"
async-trait = { workspace = true }
sysinfo = "0.31"
chrono = { workspace = true }
