[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "magray"
path = "src/main.rs"

[features]
default = ["minimal"]

# Minimal build - basic CLI functionality only
minimal = [
    "llm/minimal", 
    "memory/minimal", 
    "tools/minimal"
]

# CPU build - full functionality without GPU
cpu = [
    "ai/cpu", 
    "memory/cpu", 
    "llm/cpu", 
    "tools/cpu",
    "embeddings",
    "reranking"
]

# GPU build - full functionality with CUDA/TensorRT support  
gpu = [
    "cpu",
    "ai/gpu", 
    "memory/gpu", 
    "llm/gpu",
    "tools/gpu",
    "cuda",
    "tensorrt",
    "gpu-acceleration"
]

# Individual feature flags
embeddings = ["ai/embeddings"]
reranking = ["ai/reranking"] 
cuda = ["ai/cuda", "memory/cuda"]
tensorrt = ["ai/tensorrt"]
gpu-acceleration = ["memory/gpu-acceleration"]

[dependencies]
llm = { path = "../llm" }
router = { path = "../router" }
ai = { path = "../ai" }
memory = { path = "../memory" }
common = { path = "../common" }
tools = { path = "../tools" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = "2.0"
prettytable-rs = "0.10"
async-trait = { workspace = true }
sysinfo = "0.31"
chrono = { workspace = true }
uuid = { workspace = true }
parking_lot = "0.12.4"
rand = "0.9.2"
