[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "magray"
path = "src/main.rs"

[features]
default = ["cpu"]

# Minimal build - basic CLI functionality only
minimal = [
    "llm/minimal", 
    "memory/minimal", 
    "tools/minimal"
]

# CPU build - full functionality without GPU
cpu = [
    "ai/cpu", 
    "application/cpu",
    "memory/cpu", 
    "llm/cpu", 
    "tools/cpu",
    "embeddings",
    "reranking"
]

# GPU build - full functionality with CUDA/TensorRT support  
gpu = [
    "cpu",
    "ai/gpu", 
    "application/gpu",
    "memory/gpu", 
    "llm/gpu",
    "tools/gpu",
    "cuda",
    "tensorrt",
    "gpu-acceleration"
]

# Individual feature flags
embeddings = ["ai/embeddings", "application/embeddings"]
reranking = ["ai/reranking", "application/reranking"] 
cuda = ["ai/cuda", "memory/cuda"]
tensorrt = ["ai/tensorrt"]
gpu-acceleration = ["memory/gpu-acceleration"]

# Enable orchestrated search path in CLI (HNSW + sled VectorStore + coordinators)
orchestrated-search = [
    "memory/orchestration-modules",
    "memory/persistence",
    "memory/hnsw-index",
]

# Tests feature to include extended/slow suites
extended-tests = []
legacy-tests = []

[dependencies]
infrastructure = { path = "../infrastructure" }
application = { path = "../application" }
llm = { path = "../llm" }
router = { path = "../router" }
ai = { path = "../ai" }
memory = { path = "../memory" }
common = { path = "../common" }
tools = { path = "../tools" }
domain = { path = "../domain" }
todo = { path = "../todo" }
orchestrator = { path = "../orchestrator" }
ui = { path = "../ui" }
tokio = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
colored = "2.0"
prettytable-rs = "0.10"
async-trait = { workspace = true }
sysinfo = "0.31"
uuid = { workspace = true }
parking_lot = "0.12.4"
rand = "0.9.2"
dirs = "5.0"
dotenv = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = { workspace = true }
