[package]
name = "core"
version = "0.1.0"
edition = "2021"
description = "Core domain models and contracts for MAGRAY"

[dependencies]
# Domain modeling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling  
anyhow = "1.0"
thiserror = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Tracing and logging
tracing = "0.1"
tracing-subscriber = "0.3"

# JSON schema validation
schemars = { version = "0.8", optional = true }

[features]
default = []
validation = ["schemars"]