[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
domain = { path = "../domain" }
common = { path = "../common" }

# Config loading
toml = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }

# File system and environment
dirs = "5.0"
envy = "0.4"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Async
tokio = { workspace = true, features = ["fs", "io-util"] }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio = { workspace = true, features = ["rt", "macros", "test-util"] }