[package]
name = "llm"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
async-trait = "0.1.74"
[dev-dependencies]
mockito = "1.5"
