[package]
name = "memory"
version.workspace = true
edition.workspace = true

[features]
default = []
gpu = ["ai/gpu"]

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
uuid.workspace = true
chrono.workspace = true

# AI services
ai = { path = "../ai" }

# Common utilities
common = { path = "../common" }

# Embedding cache and storage
sled = { version = "0.34", features = ["compression"] }

# Utilities
futures = "0.3"
parking_lot = "0.12"
bincode = "1.3"
dirs = "5.0"

# Vector search
hnsw_rs = "0.3"
num_cpus = "1.0"
rayon = "1.8"
rand = "0.8"

# Fallback и graceful degradation
sha2 = "0.10"

# System monitoring
sysinfo = "0.31"

# Backup/restore functionality
tar = "0.4"
flate2 = "1.0"
tempfile = "3.0"

# Test dependencies
[dev-dependencies]
tracing-subscriber.workspace = true
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
llm = { path = "../llm" }
ort = "2.0.0-rc.10"
ndarray = "0.15"
tokenizers = "0.20"
clap = { version = "4.0", features = ["derive"] }
rand_chacha = "0.3"
tempfile = "3.0"
rand = "0.8"
fastrand = "2.0"
futures = "0.3"

[[example]]
name = "memory_demo"
path = "examples/memory_demo.rs"


[[bench]]
name = "memory_benchmarks"
harness = false

[[bench]]
name = "vector_search_benchmarks"
harness = false

[[bench]]
name = "scalability_benchmarks"
harness = false

[[bench]]
name = "vector_benchmarks"
harness = false
