[package]
name = "tools"
version.workspace = true
edition.workspace = true

[features]
default = ["cpu"]

# Minimal build - basic file and shell operations only
minimal = ["file-ops", "shell-ops"]

# CPU build - full functionality without GPU tools
cpu = [
    "minimal",
    "git-ops",
    "web-ops", 
    "plugins",
    "security"
]

# GPU build - same as CPU 
gpu = ["cpu"]

# Individual tool categories
file-ops = []
shell-ops = []
git-ops = []
web-ops = ["reqwest", "futures-util", "base64"]
plugins = ["llm/cpu"]
security = []

# Tests feature to include extended/slow suites
extended-tests = []
legacy-tests = []

[dependencies]
llm = { path = "../llm" }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
tempfile = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true, optional = true }
urlencoding = "2.1"
rand = "0.8"
thiserror = { workspace = true }
num_cpus = "1.15"
common = { path = "../common" }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std"] }
base64 = { version = "0.22", optional = true }